# CookieMonster

./: .gitignore  CookieMonster-threat-model.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
cookie_monster/: __init__.py  api_server.py  browser_profiles.py  browser_session.py  capture.py  cdp.py  chrome_discovery.py  chrome_launcher.py  cli.py  client.py  config.py  crypto.py  diffing.py  doctor.py  exceptions.py  hooks.py  models.py  policy.py  recipes.py  replay.py  results.py  security_utils.py  session_health.py  storage.py  tab_manager.py  ui.py
cookie_monster/plugins/: __init__.py  base.py  builtins.py  registry.py
man/: cookie-monster.1
scripts/: auth_scrape_config.sample.json  auth_scrape_tabs.py  e2e_github.py  e2e_site.py  release_pypi.sh
tests/: test_api_security.py  test_auth_scrape.py  test_browser_profiles.py  test_capture.py  test_capture_extract.py  test_cli.py  test_client.py  test_crypto.py  test_discovery.py  test_launcher.py  test_new_commands.py  test_plugins.py  test_replay.py  test_session_and_diff.py  test_storage.py  test_storage_encryption.py  test_tab_manager.py
