[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookie-monster-cli"
version = "0.1.0"
description = "Capture auth headers from Chrome DevTools and replay requests for automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CookieMonster Contributors" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.0",
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
cookie-monster = "cookie_monster.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["cookie_monster*"]
